[package]
name = "ip-spoofing"
version = "0.1.2"
authors = ["StackOverflowExcept1on"]
edition = "2024"
description = "Library to send fake IPv4 headers & UDP/TCP-SYN packets to perform L3/L4 attacks"
repository = "https://github.com/StackOverflowExcept1on/ip-spoofing"
license = "MIT"
keywords = ["ipv4", "tcp", "udp", "ip-spoofing"]
categories = ["network-programming", "api-bindings"]

[dependencies]
thiserror = "2.0"
rand = "0.9"
nix = { version = "0.30", features = ["net"] }
etherparse = "0.19"
